Created attachment 34668 [details] test case $ arm-linux-gnueabihf-gcc -c -g -O2 -std=c++11 -Wno-attributes -Wno-non-template-friend test.ii test.ii:66:53: internal compiler error: in symtab_remove_unreachable_nodes, at ipa.c:547 H<J *> Scopes::favScopes() const { return m_scopes; } ^ Please submit a full bug report, with preprocessed source if appropriate. configured with --with-arch=armv7-a --with-fpu=vfpv3-d16 --with-float=hard --with-mode=thumb not seen on the trunk, introduced by backporting the fix for PR63970. Reverting this backport lets the test case build.
couldn't find any approval email on gcc-patches for the backport. Was this supposed to go to the gcc-4.9 google branch?
Author: doko Date: Wed Feb 4 23:36:22 2015 New Revision: 220426 URL: https://gcc.gnu.org/viewcvs?rev=220426&root=gcc&view=rev Log: 2015-02-04 Matthias Klose <doko@ubuntu.com> PR target/64938 Backport from mainline 2015-01-15 Jan Hubicka <hubicka@ucw.cz> PR ipa/64068 PR ipa/64559 * ipa.c (symbol_table::remove_unreachable_nodes): Do not put abstract origins into boundary. 2015-02-04 Matthias Klose <doko@ubuntu.com> Backport from mainline 2015-01-15 Martin Liska <mliska@suse.cz> * g++.dg/ipa/pr64068.C: New test. * gcc.dg/ipa/PR64559.c: New test. Added: branches/gcc-4_9-branch/gcc/testsuite/g++.dg/ipa/pr64068.C branches/gcc-4_9-branch/gcc/testsuite/gcc.dg/ipa/PR64559.c Modified: branches/gcc-4_9-branch/gcc/ChangeLog branches/gcc-4_9-branch/gcc/ipa.c branches/gcc-4_9-branch/gcc/testsuite/ChangeLog
Author: wmi Date: Thu Feb 5 00:27:54 2015 New Revision: 220431 URL: https://gcc.gnu.org/viewcvs?rev=220431&root=gcc&view=rev Log: Backport from gcc-4_9-branch. 2015-02-04 Matthias Klose <doko@ubuntu.com> PR target/64938 Backport from mainline 2015-01-15 Jan Hubicka <hubicka@ucw.cz> PR ipa/64068 PR ipa/64559 * ipa.c (symbol_table::remove_unreachable_nodes): Do not put abstract origins into boundary. Added: branches/google/gcc-4_9/gcc/testsuite/g++.dg/ipa/pr64068.C branches/google/gcc-4_9/gcc/testsuite/gcc.dg/ipa/PR64559.c Modified: branches/google/gcc-4_9/gcc/ipa.c
Fixed.
Author: ctice Date: Thu Feb 19 00:43:33 2015 New Revision: 220805 URL: https://gcc.gnu.org/viewcvs?rev=220805&root=gcc&view=rev Log: Backport patch from Google 4.9 branch (r220431): r220431 | wmi | 2015-02-04 16:27:54 -0800 (Wed, 04 Feb 2015) | 12 lines Backport from gcc-4_9-branch. 2015-02-04 Matthias Klose <doko@ubuntu.com> PR target/64938 Backport from mainline 2015-01-15 Jan Hubicka <hubicka@ucw.cz> PR ipa/64068 PR ipa/64559 * ipa.c (symbol_table::remove_unreachable_nodes): Do not put abstract origins into boundary. Added: branches/google/gcc-4_9-mobile/gcc/testsuite/g++.dg/ipa/pr64068.C branches/google/gcc-4_9-mobile/gcc/testsuite/gcc.dg/ipa/PR64559.c Modified: branches/google/gcc-4_9-mobile/gcc/ipa.c