backport: [multiple changes]

2015-02-04  Matthias Klose  <doko@ubuntu.com>

        PR target/64938
        Backport from mainline
        2015-01-15  Jan Hubicka  <hubicka@ucw.cz>

        PR ipa/64068
        PR ipa/64559
        * ipa.c (symbol_table::remove_unreachable_nodes):
        Do not put abstract origins into boundary.

2015-02-04  Matthias Klose  <doko@ubuntu.com>

        Backport from mainline
        2015-01-15  Martin Liska  <mliska@suse.cz>

        * g++.dg/ipa/pr64068.C: New test.
        * gcc.dg/ipa/PR64559.c: New test.

From-SVN: r220426